# ResumeDB

./: .dockerignore  .gitignore  AGENTS.md  Agents.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
backend/: env.yml
backend/resumedb/: agent.py  agent_connections.py  audit.py  chat.py  claude.py  codex.py  config.py  datarepo.py  gitops.py  importer.py  interview.py  main.py  mcp_server.py  pipeline.py  render.py  review.py  routes.py  scheduler.py
backend/resumedb/scaffold/: CLAUDE.md  gitignore
backend/tests/: test_claude.py  test_codex.py  test_deployment.py  test_ingestion.py  test_m1.py  test_m2.py  test_mcp.py  test_mvp.py  test_ported_features.py
context/: CLAUDE_CLI_INTEGRATION.md  design.md  prompt.md  vision.md
deploy/: start-backend.sh
extension/: README.md  backend-config.js  backend-config.test.mjs  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  sidepanel.html  sidepanel.js
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
frontend/design-ref/: resume-studio.html
frontend/public/: site.webmanifest
frontend/src/: AgentConnections.tsx  AgentTimeline.tsx  App.tsx  Applications.tsx  ChatRail.tsx  Dashboard.tsx  DemoApplication.tsx  EntryForm.tsx  GuidedDemo.tsx  Ingest.tsx  InterviewPrep.tsx  Library.tsx  MarkdownField.tsx  Onboarding.tsx  Settings.tsx  Templates.tsx  Workspace.tsx  api.ts  demoData.ts  demoMode.ts  ds.css  icons.tsx  main.tsx  runtime.ts
videos/resumedb-demo/: .gitignore  BRIEF.md  FRAME_PACKETS.md  SCRIPT.md  STORYBOARD.md  audio_meta.json  caption_groups.json  frame.md  index.html  meta.json  package.json  transcript.json
videos/resumedb-demo/.hyperframes/: caption-skin.html
videos/resumedb-demo/.media/: preferences.json
videos/resumedb-demo/capture/: AGENTS.md  meta.json
videos/resumedb-demo/compositions/: captions.html
videos/resumedb-demo/scripts/: build-captions.mjs  build-fish-audio-meta.mjs  fish-tts.mjs  generate-demo-resumes.py  level-narration.mjs  normalize-render-audio.mjs  transcribe-fish-clips.mjs  (+1 more)
(+68 files in other folders)
