[project]
name = "resumedb"
version = "0.1.0"
description = "Agent-native internship discovery, tailoring, and application management"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139.0",
  "mcp>=1.28.1",
  "openai-codex==0.1.0b2",
  "pypdf>=6.7.0",
  "python-multipart>=0.0.22",  # required by the /api/upload multipart endpoints
  "ruamel-yaml>=0.19.0",
  "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
  "httpx2>=2.7.0",
  "pytest>=9.0.0",
  "ruff>=0.12.0",
]

[tool.uv]
package = false  # resumedb runs via --app-dir / conftest path insertion, not installed

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
